 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 5
============

* [DanielPharos]: The skinview now properly updates to reflect changes made to textures.

* [cdunde]: Made toolbars interactive with one another to
          - turn off buttons when needed, avoiding errors and crashes.

* [cdunde]: To stop doautozoom in Skin-view, causing unexpected view jumps.

* [DanielPharos]: Added FTX file loading and saving support (Heavy Metal: F.A.K.K. 2 textures).

* [cdunde]: Setup function to reset Skin-view.

* [cdunde]: Changed Quake 2 "TextureFormat" to save .md2 model skin textures as .pcx proper format.

* [cdunde]: Added "newframe" to New files... toolbox for "Model" type for a new model to be made from.

* [cdunde]: Added Used Skin Textures for displaying in the Texture Browser.

* [DanielPharos]: Partially build in and enabled the online update system. Still needs a lot of work, but it's
          - downloading an index file and parsing it.

* [cdunde/DanielPharos]: Setup displaying of 'Used Textures' in current map being edited in the Texture Browser.

* [cdunde]: Setup of a full beizer library with over 30 prefab beizers to work with for games that can use beziers.

* [cdunde]: Fixed a bug with the opening the Texture Browser window icon button.

* [cdunde]: Added Special entity cv.canvas() line drawing for Shine engine, may also be useful for other games.

6.5.0 Beta 4
============

* [cdunde/DanielPharos]: Added new Templates functions and Templates. This is a very powerful new element
          - with a whole array of capabilities. See the entire section in the Infobase Docs on Templates,