@@ -15,6 +15,8 @@ $Id$
 6.5.0 Beta 5
 ============
 
+* [DanielPharos]: Big changes to OpenGL: should fix the OpenGL hangups.
+
 * [DanielPharos]: The skinview now properly updates to reflect changes made to textures.
 
 * [cdunde]: Made toolbars interactive with one another to
